--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,14 @@ tensorboard>=2.4.1
 # pycocotools>=2.0  # COCO mAP
 # roboflow
 # ultralytics  # HUB https://hub.ultralytics.com
+
+pandas~=1.5.2
+torch~=1.13.0
+PyYAML~=6.0
+torchvision~=0.14.0
+tqdm~=4.64.1
+seaborn~=0.12.1
+ipython~=8.6.0
+requests~=2.28.1
+psutil~=5.9.4
+thop~=0.1.1.post2209072238
